--- a/Assets/Scripts/Editor/UI/SoundEditor_Style.uss
+++ b/Assets/Scripts/Editor/UI/SoundEditor_Style.uss
@@ -23,3 +23,8 @@
     border-top-color: rgb(214, 161, 94);
     border-bottom-color: rgb(214, 161, 94);
 }
+
+.scrapper:hover#scrapper-body {
+    background-color: rgb(219, 175, 104);
+    -unity-background-image-tint-color: rgb(219, 175, 104);
+}
