--- a/Assets/Scripts/Editor/UI/Scrapper_Style.uss
+++ b/Assets/Scripts/Editor/UI/Scrapper_Style.uss
@@ -9,7 +9,7 @@
     border-right-width: -5px;
     border-top-width: -5px;
     border-bottom-width: -5px;
-    -unity-background-image-tint-color: rgb(219, 175, 104);
+    -unity-background-image-tint-color: rgb(255, 255, 255);
     -unity-background-scale-mode: scale-and-crop;
     flex-grow: 1;
     flex-shrink: 0;
@@ -45,10 +45,19 @@
 }
 
 .dragger-body {
-    background-color: rgb(219, 175, 104);
+    background-color: rgb(255, 255, 255);
     flex-grow: 1;
+    width: 80%;
+    max-width: 80%;
+    min-width: 80%;
+    left: 18%;
 }
 
 #unity-slider-container {
     background-color: rgba(0, 0, 0, 0);
+}
+
+#unity-slider {
+    margin-left: -10px;
+    margin-right: -10px;
 }
