--- a/Assets/Scripts/Editor/UI/SoundEditor.uxml
+++ b/Assets/Scripts/Editor/UI/SoundEditor.uxml
@@ -8,11 +8,11 @@
             </ui:TextField>
             <ui:Slider label="Volume" value="1" high-value="1" name="volume-slider" focusable="false" style="margin-bottom: 10px; margin-top: 5px; width: 79%;" />
             <ui:VisualElement name="main-window" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); margin-top: 5%;">
-                <ui:VisualElement name="amplitude" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.3); align-self: center; align-items: center; max-width: 95%; max-height: 55%; min-width: 95%; min-height: 40%; justify-content: flex-end; flex-direction: column;">
+                <ui:VisualElement name="amplitude" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.3); align-self: center; align-items: center; max-width: 95%; max-height: 60%; min-width: 95%; min-height: 60%; justify-content: flex-end; flex-direction: column; height: 60%;">
                     <ui:VisualElement name="event-visualizer" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-shrink: 0; flex-direction: row; width: 100%; max-width: 100%; min-width: 100%;" />
-                    <Scrapper direction="Horizontal" value="0" BodyHeight="1.1" name="scrapper" high-value="1" style="width: 100%; max-width: 100%; min-width: 100px; height: auto;" />
-                    <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" mode="Horizontal" name="amplitude-scroller" vertical-scroller-visibility="Hidden" horizontal-scroller-visibility="AlwaysVisible" style="background-color: rgba(43, 43, 43, 0.78); flex-grow: 1; flex-direction: row; max-height: 85%; min-height: 85%;">
+                    <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" mode="Horizontal" name="amplitude-scroller" vertical-scroller-visibility="Hidden" horizontal-scroller-visibility="AlwaysVisible" style="background-color: rgba(43, 43, 43, 0); flex-grow: 1; flex-direction: row; max-height: 85%; min-height: 85%;">
                         <ui:VisualElement name="wave-container" style="flex-grow: 0; height: 100%; width: 0; transform-origin: left;" />
+                        <Scrapper direction="Horizontal" value="0" BodyHeight="1.1" name="scrapper" high-value="1" style="width: 100%; max-width: 100%; min-width: 100px; height: auto; position: absolute;" />
                     </ui:ScrollView>
                 </ui:VisualElement>
                 <ui:VisualElement name="button-container" style="flex-shrink: 1; flex-direction: row; height: 15%; width: 50%; align-self: center; justify-content: center; align-items: center;">
