--- a/Assets/Scripts/Editor/UI/SoundEditor.uxml
+++ b/Assets/Scripts/Editor/UI/SoundEditor.uxml
@@ -26,9 +26,7 @@
         </ui:VisualElement>
         <ui:IMGUIContainer name="inspector-window" style="flex-grow: 1;">
             <ui:Label tabindex="-1" text="Inspector" display-tooltip-when-elided="true" name="inspector-label" picking-mode="Ignore" style="font-size: 14px; background-color: rgba(51, 51, 51, 0.16); padding-top: 2px;" />
-            <InspectorView name="inspector" style="background-color: rgba(51, 51, 51, 0.16); flex-grow: 1;">
-                <uie:PropertyField name="property-field" />
-            </InspectorView>
+            <InspectorView name="inspector" style="background-color: rgba(51, 51, 51, 0.16); flex-grow: 1;" />
         </ui:IMGUIContainer>
     </SplitView>
 </ui:UXML>
