--- a/Assets/Scripts/Editor/UI/SoundEditor.uxml
+++ b/Assets/Scripts/Editor/UI/SoundEditor.uxml
@@ -7,12 +7,12 @@
                 <uie:ToolbarSpacer name="spacer" />
                 <uie:ToolbarButton text="Select" display-tooltip-when-elided="true" name="audio-select" focusable="false" />
             </uie:Toolbar>
-            <ui:TextField picking-mode="Ignore" label="Sound File" value="None" name="audio-field" readonly="true" />
+            <ui:TextField picking-mode="Ignore" label="Sound File" value="None" name="audio-field" readonly="true" style="margin-right: 23px;" />
             <ui:Slider label="Volume" value="1" high-value="1" name="volume-slider" focusable="false" style="margin-bottom: 10px; margin-top: 5px; width: 79%;" />
             <ui:VisualElement name="main-window" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); margin-top: 5%;">
                 <ui:VisualElement name="amplitude" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.3); align-self: center; align-items: center; max-width: 95%; max-height: 60%; min-width: 95%; min-height: 60%; justify-content: flex-end; flex-direction: column; height: 60%;">
                     <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" mode="Horizontal" name="amplitude-scroller" vertical-scroller-visibility="Hidden" horizontal-scroller-visibility="AlwaysVisible" style="background-color: rgba(43, 43, 43, 0); flex-grow: 1; flex-direction: row; max-height: 100%; min-height: 100%; height: 100%;">
-                        <ui:VisualElement name="event-container" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-shrink: 1; flex-direction: row; width: 100%; max-width: 100%; min-width: 100%; height: 10%; max-height: 10%; min-height: 10%; position: absolute; transform-origin: left;" />
+                        <ui:VisualElement name="event-container" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-shrink: 1; flex-direction: row; width: 100%; max-width: 100%; min-width: 100%; height: 10%; max-height: 10%; min-height: 10%; position: absolute; transform-origin: left; overflow: hidden;" />
                         <ui:VisualElement name="wave-container" style="height: 85%; width: 0; transform-origin: left; max-height: 85%; min-height: 85%; align-self: flex-start; top: 10%;" />
                         <Scrapper direction="Horizontal" value="0" BodyHeight="1.1" name="scrapper" high-value="1" style="width: 100%; max-width: 100%; min-width: 100px; height: auto; position: absolute; top: 10%;" />
                     </ui:ScrollView>
