--- a/Assets/Scripts/Editor/UI/SoundEditor.uxml
+++ b/Assets/Scripts/Editor/UI/SoundEditor.uxml
@@ -13,14 +13,17 @@
                 <ui:VisualElement name="amplitude" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.3); align-self: center; align-items: center; max-width: 95%; max-height: 60%; min-width: 95%; min-height: 60%; justify-content: flex-end; flex-direction: column; height: 60%;">
                     <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" mode="Horizontal" name="amplitude-scroller" vertical-scroller-visibility="Hidden" horizontal-scroller-visibility="AlwaysVisible" style="background-color: rgba(43, 43, 43, 0); flex-grow: 1; flex-direction: row; max-height: 100%; min-height: 100%; height: 100%;">
                         <ui:VisualElement name="event-container" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-shrink: 1; flex-direction: row; width: 100%; max-width: 100%; min-width: 100%; height: 10%; max-height: 10%; min-height: 10%; position: absolute; transform-origin: left; overflow: hidden;" />
-                        <ui:VisualElement name="wave-container" style="height: 85%; width: 0; transform-origin: left; max-height: 85%; min-height: 85%; align-self: flex-start; top: 10%;" />
+                        <ui:VisualElement name="wave-container" style="height: 85%; width: 0; transform-origin: left; max-height: 85%; min-height: 85%; align-self: flex-start; top: 10%; overflow: hidden;" />
                         <Scrapper direction="Horizontal" value="0" BodyHeight="1.1" name="scrapper" high-value="1" style="width: 100%; max-width: 100%; min-width: 100px; height: auto; position: absolute; top: 10%;" />
                     </ui:ScrollView>
                 </ui:VisualElement>
                 <ui:VisualElement name="button-container" style="flex-shrink: 1; flex-direction: row; height: 15%; width: 50%; align-self: center; justify-content: center; align-items: center;">
-                    <ui:Button display-tooltip-when-elided="true" name="stop-button" focusable="false" style="background-image: url(&apos;project://database/Assets/Scripts/Editor/UI/stop-icon.png?fileID=2800000&amp;guid=fc0ca343052e37b4eb9d71dfddc0b4f7&amp;type=3#stop-icon&apos;); -unity-background-scale-mode: scale-to-fit;" />
-                    <ui:Button display-tooltip-when-elided="true" name="play-button" focusable="false" style="background-image: url(&apos;project://database/Assets/Scripts/Editor/UI/play-icon.png?fileID=2800000&amp;guid=b067d3bf70e9c8a45932f9b5fc3cc26c&amp;type=3#play-icon&apos;); -unity-background-scale-mode: scale-to-fit;" />
-                    <ui:Button display-tooltip-when-elided="true" name="pause-button" focusable="false" style="-unity-background-scale-mode: scale-to-fit; background-image: url(&apos;project://database/Assets/Scripts/Editor/UI/pause-icon.png?fileID=2800000&amp;guid=0b79e3944b75c744bacbc54b7e37869e&amp;type=3#pause-icon&apos;);" />
+                    <ui:Button display-tooltip-when-elided="true" name="stop-button" focusable="false" style="background-image: url(&apos;project://database/Assets/Scripts/Editor/UI/Icons/stop-icon.png?fileID=2800000&amp;guid=fc0ca343052e37b4eb9d71dfddc0b4f7&amp;type=3#stop-icon&apos;); -unity-background-scale-mode: scale-to-fit;" />
+                    <ui:Button display-tooltip-when-elided="true" name="play-button" focusable="false" style="background-image: url(&apos;project://database/Assets/Scripts/Editor/UI/Icons/play-icon.png?fileID=2800000&amp;guid=b067d3bf70e9c8a45932f9b5fc3cc26c&amp;type=3#play-icon&apos;); -unity-background-scale-mode: scale-to-fit;" />
+                    <ui:Button display-tooltip-when-elided="true" name="pause-button" focusable="false" style="-unity-background-scale-mode: scale-to-fit; background-image: url(&apos;project://database/Assets/Scripts/Editor/UI/Icons/pause-icon.png?fileID=2800000&amp;guid=0b79e3944b75c744bacbc54b7e37869e&amp;type=3#pause-icon&apos;);" />
+                </ui:VisualElement>
+                <ui:VisualElement name="bpm-configurations" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.2); align-self: auto;">
+                    <ui:Button text="Configure Rhythm" display-tooltip-when-elided="true" focusable="false" name="configure-rhythm-button" style="width: 20%; height: 25px; align-self: center; margin-top: 10px;" />
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
