--- a/Assets/Scripts/Editor/UI/ConfigureRhythm_Style.uss
+++ b/Assets/Scripts/Editor/UI/ConfigureRhythm_Style.uss
@@ -47,6 +47,7 @@
 
 .unity-min-max-slider__min-thumb {
     background-color: rgb(255, 255, 255);
+    height: 30%;
 }
 
 .unity-min-max-slider__max-thumb {
